# JlManagementApi

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app_affiliate/: __init__.py  apps.py  models.py  urls.py
app_affiliate/api/: __init__.py  exceptions.py
app_affiliate/api/serializers/: __init__.py
app_affiliate/api/views/: __init__.py
app_affiliate/application/: __init__.py
app_affiliate/application/services/: create_affiliate.py  get_affiliate_history.py  get_affiliate_summary.py  get_global_dashboard.py  register_contribution.py  soft_delete_affiliate.py  soft_delete_contribution.py  update_affiliate.py
app_affiliate/domain/: __init__.py  exceptions.py
app_affiliate/domain/interfaces/: __init__.py  affiliate_repository_interface.py  contribution_repository_interface.py
app_affiliate/domain/models/: __init__.py
app_affiliate/infrastructure/: __init__.py  models.py
app_affiliate/infrastructure/repositories/: __init__.py  affiliate_repository.py  contribution_repository.py
app_affiliate/infrastructure/services/: __init__.py
app_affiliate/migrations/: 0001_initial.py  0002_contribution_status.py  __init__.py
core_project/: settings.py  urls.py
doc/: JlManagement_Postman_Collection.json
